The cases left are named in the order they were declared in
Taking a case out of the middle left a new set, and a set that keeps the values is
not one that keeps their order. `Alpha | Beta | Gamma | Delta | Epsilon | Zeta`
with `Beta` taken away came back naming `Zeta, Gamma, Epsilon, Delta`.

A report is read against the declaration it came from, so the list has to run the
way that declaration does — which is what everything either side of this already
does: `leafCases` builds it in order and `Evidence.ordered` keeps whatever order it
is handed.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_019GSZdJqs1yDbifBZ3P69a6